--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,27 +16,21 @@ jobs:
       contents: read
       packages: write
 
-    #services:
-    #  postgres:
-    #    image: postgis/postgis
-    #    env:
-    #      # must specify password for PG Docker container image, see: https://registry.hub.docker.com/_/postgres?tab=description&page=1&name=10
-    #      POSTGRES_PASSWORD: qazwsx
-    #      POSTGRES_DB: numdes
-    #    ports:
-    #      - 5432:5432
-    #    # needed because the postgres container does not provide a healthcheck
-    #    options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+    services:
+      postgres:
+        image: postgis/postgis
+        env:
+          # must specify password for PG Docker container image, see: https://registry.hub.docker.com/_/postgres?tab=description&page=1&name=10
+          POSTGRES_PASSWORD: qazwsx
+          POSTGRES_DB: test
+        ports:
+          - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
       - name: checkout-repo
         uses: actions/checkout@v2
-
-      - uses: huaxk/postgis-action@v1
-        with:
-          postgresql version: 'latest'  # See https://https://hub.docker.com/r/mdillon/postgis for available versions, if it is not specified, use the default value 'latest'
-          postgresql password: 'qazwsx'   # This environment variable sets the superuser password for PostgreSQL, maybe string or secrets, the default superuser is defined by the input environment variable: postgresql user.
-          postgresql db: 'test'  # This optional environment variable can be used to define a different name for the default database that is created when the image is first started. If it is not specified, then the value of postgresql user will be used.
 
       - name: test-db
         run : psql -h 127.0.0.1 -p 5432 -U postgres
