--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,7 +37,10 @@ jobs:
           auto-update-conda: true
 
       - name: install conda packages
-        run: conda install -c conda-forge geoalchemy2 
+        run: conda install -c conda-forge geoalchemy2 psycopg2
+
+      - name: conda packages
+        run: conda list
 
       - name: test-db
         run : python testdb.py
