Added auto activation for conda env

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,6 +35,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
+          auto-activate-base: true
 
       - name: install conda packages
         run: conda install -c conda-forge geoalchemy2 psycopg2
@@ -44,3 +45,5 @@ jobs:
 
       - name: test-db
         run : python testdb.py
+
+      - run: python -v
