Added diagnostic info

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,6 +43,9 @@ jobs:
 
       - name: conda packages
         run: conda list
+        run: conda info
+        run: python -v
+
 
       - name: test-db
         run : python testdb.py
