--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,13 +41,8 @@ jobs:
       - name: install conda packages
         run: conda install -c conda-forge geoalchemy2 psycopg2
 
-      - name: conda packages
-        run: conda list
-
+      - run: conda list
       - run: conda info
 
-      - run: python -v
-
-
       - name: test-db
-        run : python testdb.py
+        run : conda activate base && python testdb.py
