Removed separate conda activation base for python

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,4 +48,4 @@ jobs:
       - run: conda info
 
       - name: test-db
-        run : conda activate base && python testdb.py
+        run : python testdb.py
