--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,10 +44,10 @@ jobs:
           activate-environment: ""
 
       - name: install conda packages
-        run: conda install -c conda-forge geoalchemy2 psycopg2
+        run: conda install -c conda-forge flask-restful geoalchemy2 nose psycopg2 pyproj shapely
 
       - run: conda list
       - run: conda info
 
-      - name: test-db
-        run : python testdb.py
+      - name: nosetests
+        run : nosetests -vv
