--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -44,7 +44,7 @@ jobs:
           activate-environment: ""
 
       - name: Install conda packages
-        run: conda install -c conda-forge flask-restful geoalchemy2 nose psycopg2 pyproj shapely
+        run: conda install -y -c conda-forge flask-restful geoalchemy2 nose psycopg2 pyproj shapely sqlalchemy
 
       - run: conda list
       - run: conda info
