--- a/conda-recipe/meta.yaml
+++ b/conda-recipe/meta.yaml
@@ -12,7 +12,7 @@ build:
     number: {{ buildnumber }}
 
 requirements:
-    run:
+    host::
       - python >=3
       - flask-restful
       - geoalchemy2
@@ -25,6 +25,8 @@ test:
     requires:
       - nose
       - requests
+    imports:
+      - postgis_crud_rest
     commands:
       - nosetests -v --exe tests
     source_files:
