Added build and install for module

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,5 +49,7 @@ jobs:
       - run: conda list
       - run: conda info
 
+      - run: conda-recipe/build.sh
+
       - name: Nosetests
         run : nosetests -vv
