--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,7 +48,7 @@ jobs:
 
       - run: conda list
       - run: conda info
-
+      - run: chmod +x conda-recipe/build.sh
       - run: conda-recipe/build.sh
 
       - name: Nosetests
