--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,7 +57,7 @@ jobs:
 
       - uses: ricardochaves/python-lint@v1.4.0
         with:
-          python-root-list: "python_alelo tests"
+          python-root-list: "postgis_crud_rest"
           use-pylint: false
           use-pycodestyle: true
           use-flake8: false
